fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    color-scheme: light;
+  }
+}
+
+/* Chrome */
+@media (forced-colors: active) {
+  :root {
+    color-scheme: light;
   }
 }
 
